--- a/index.html
+++ b/index.html
@@ -104,5 +104,6 @@
 </head>
   <body class="bg-cream text-charcoal-900 font-sans antialiased selection:bg-taupe-500 selection:text-white">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
